Aligned Items and fixed text input width

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,9 @@ DARK BLUE: #1D3557
 body {
     margin: 0;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 img {
@@ -19,10 +22,9 @@ img {
 
 .header {
     height: 50px;
+    width: 100%;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    
+    justify-content: flex-start; 
 }
 
 .middleSection {
@@ -64,6 +66,7 @@ img {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    width: 400px;;
 }
 
 .signUpForm {
